added an images folder, a background image, and centered all the text

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <span id="todo-item">Add a Sport: <input id="to-do" type="text"><input id="add-sport" value="GO!"
                     type="submit"></span>
         </form>
+        <h2 hidden>Click to play the GIF!</h2>
+        <br>
         <div id="gifs-appear-here">
         </div>
 
